partial fix for bug #364298:  Crash [ @ BindStatementURI ] when pasting a folder from the history sidebar into the bookmarks toolbar

this turns the crash into a javascript exception, but we are still unable to copy and paste history folder into bookmarks.

r=dietrich